--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ form {
   transition: all 0.3s ease-in-out;
   background: linear-gradient(115deg, var(--color-mid-red), var(--color-gold));
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.add-btn:focus-visible {
+  outline: none;
 }
 
 .add-btn:hover {
